Fix the description for color contrast example 3

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ footer {
 }
 .colorblind-examples {
     box-shadow: 0px 2px 5px black;
-    padding: 10px;
+    padding: 20px;
 }
 #colorblind1 {
     color: blue;
